# OpenGLDemo

./: CMakeLists.txt  main.cpp
applicaiton/: CMakeLists.txt  application.cpp  application.h
applicaiton/camera/: camera.cpp  camera.h  camera_control.cpp  camera_control.h  game_camera_control.cpp  orthoCamera.cpp  orthoCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  tracker_ball_control.cpp  tracker_ball_control.h
assets/shader/: basic_fragment.glsl  basic_vertex.glsl
glFramework/: CMakeLists.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h  core.h
res/shader/: basic.glsl
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
